// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates element %p 1`] = `
{
  "key": null,
  "props": {},
  "type": undefined,
}
`;

exports[`creates element [Function Component] 1`] = `
{
  "key": null,
  "props": {},
  "type": [Function],
}
`;

exports[`creates element [Function Component] 2`] = `
{
  "key": null,
  "props": {},
  "type": [Function],
}
`;

exports[`creates element [Function Component] 3`] = `
{
  "key": null,
  "props": {
    "children": [
      null,
    ],
  },
  "type": [Function],
}
`;

exports[`creates element [Function Component] 4`] = `
{
  "key": null,
  "props": {
    "style": {
      "height": 200,
      "width": 100,
    },
  },
  "type": [Function],
}
`;

exports[`creates element [Function Component] 5`] = `
{
  "key": null,
  "props": {
    "children": [
      null,
    ],
    "style": {
      "height": 200,
      "width": 100,
    },
  },
  "type": [Function],
}
`;

exports[`creates element [Function Component] 6`] = `
{
  "key": null,
  "props": {
    "children": [
      [Function],
    ],
    "style": {
      "height": 200,
      "width": 100,
    },
  },
  "type": [Function],
}
`;

exports[`creates element [Function Component] 7`] = `
{
  "key": null,
  "props": {
    "children": [
      [Function],
      [Function],
    ],
  },
  "type": [Function],
}
`;

exports[`creates element [Function Component] 8`] = `
{
  "key": null,
  "props": {
    "children": [
      [Function],
    ],
  },
  "type": [Function],
}
`;

exports[`creates element [Function Component] 9`] = `
{
  "key": null,
  "props": {
    "children": [
      [Function],
    ],
  },
  "type": [Function],
}
`;
